--- a/src/main/resources/templates/Registration.html
+++ b/src/main/resources/templates/Registration.html
@@ -11,12 +11,11 @@
 							th:object="${userReg}" method="post">
   <div class="form-group">
     <label for="exampleInputEmail1">First Name</label>
-    <input type="text" class="form-control" name="firstName" aria-describedby="emailHelp" placeholder="Enter email" required>
+    <input type="text" class="form-control" name="firstname" aria-describedby="emailHelp" placeholder="Enter email" required>
   </div>
-  
   <div class="form-group">
     <label for="exampleInputEmail1">LastName</label>
-    <input type="text" class="form-control" name="lastName" aria-describedby="emailHelp" placeholder="First Name" required>
+    <input type="text" class="form-control" name="lastname" aria-describedby="emailHelp" placeholder="First Name" required>
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
