--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -20,15 +20,15 @@
                 <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/leave">leave</a>
+                <a class="nav-link" href="/leave">LeaveApply</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="/leave2">leave2</a>
+                <a class="nav-link" href="/leavestatus">LeaveStatus</a>
             </li>
-            <li class="nav-item">
+          <!--  <li class="nav-item">
                 <a class="nav-link" href="#">apply</a>
-            </li>
+            </li>-->
             <form th:action="@{/logout}" method="post">
                 <input type="submit" value="Logout" />
             </form>
