--- a/src/main/resources/templates/leavebal.html
+++ b/src/main/resources/templates/leavebal.html
@@ -11,19 +11,19 @@
                              th:object="${lb}" method="post">
 
     <div class="form-group">
-        <label for="exampleInputEmail1">From Date</label>
-        <input type="date" class="form-control"  name="emergencyleave"  required>
+        <label for="exampleInputEmail1">Emergency Leave</label>
+        <input type="text" class="form-control"  name="emergencyleave"  required>
 
     </div>
     <div class="form-group">
-        <label for="exampleInputEmail1">To Date</label>
-        <input type="date" class="form-control"  name="paidleave"  required>
+        <label for="exampleInputEmail1">Paid Leave</label>
+        <input type="text" class="form-control"  name="paidleave"  required>
 
     </div>
 
 
     <div class="form-group">
-        <label for="exampleInputEmail1">Leave Reason</label>
+        <label for="exampleInputEmail1">Total Leave</label>
         <input type="text" class="form-control"  name="totalbal"  required>
 
     </div>
