--- a/src/main/resources/templates/leave.html
+++ b/src/main/resources/templates/leave.html
@@ -8,25 +8,17 @@
 <body>
 <h2 th:text="${message}"></h2>
 <div class="container"><form action="#" th:action="@{/apply}"
-                             th:object="${leaveObj}" method="post">
-<!--    <div class="form-group">-->
-<!--        <label for="exampleInputEmail1">Leave Form Date</label>-->
-<!--        <input type="date" class="form-control" name="leaveFromDate" aria-describedby="emailHelp" placeholder="Enter email" required>-->
-<!--    </div>-->
-<!--    <div class="form-group">-->
-<!--        <label for="exampleInputEmail1">Leave To Date</label>-->
-<!--        <input type="date" class="form-control" name="leaveToDate" aria-describedby="emailHelp" placeholder="Enter email" required>-->
-<!--    </div>-->
+                              method="post">
 
 
     <div class="form-group">
         <label for="exampleInputEmail1">From Date</label>
-        <input type="date" class="form-control"  name="leavefromdate"  required>
+        <input type="date" class="form-control"  name="leaveFromDate"  required>
 
     </div>
     <div class="form-group">
         <label for="exampleInputEmail1">To Date</label>
-        <input type="date" class="form-control"  name="leavetodate"  required>
+        <input type="date" class="form-control"  name="leaveToDate"  required>
 
     </div>
 
@@ -36,15 +28,25 @@
         <input type="text" class="form-control"  name="reason"  required>
 
     </div>
-
+<!--
     <div class="form-group">
         <label for="exampleInputPassword1">Leave Type</label>
-        <input type="text" class="form-control" name="leavetype"  required>
-    </div>
+        <input type="text" class="form-control" name="leaveType"  required>
+    </div>-->
 
+<div>
+    <label>LeaveType</label>
+    <select type="select" class="select" name="leaveType" required>
+
+        <option value="el">Emergency Leave</option>
+        <option value="pl">Paid Leave</option>
+
+    </select>
+
+</div>
     <div class="form-group">
         <label for="exampleInputPassword1">Leave Message</label>
-        <input type="text" class="form-control" name="leavemessage"  required>
+        <input type="text" class="form-control" name="leaveMessage"  required>
     </div>
 <!--
     <div class="form-group">
