--- a/src/main/resources/templates/Registration.html
+++ b/src/main/resources/templates/Registration.html
@@ -32,8 +32,9 @@
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="Password" required>
   </div>
-  <div class="col-md-6 mb-4">
+  <!--<div class="col-md-6 mb-4">
 <label>Select Roles</label>
+
     <select type="select" class="select" name="roles" required>
 
       <option value="Emp">Emp</option>
@@ -41,8 +42,9 @@
       <option value="Lead">Lead</option>
       <option value="Accountant">Accountant</option>
     </select>
+&ndash;&gt;
 
-  </div>
+  </div>-->
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 </div>
