--- a/src/main/resources/templates/Leave.html
+++ b/src/main/resources/templates/Leave.html
@@ -10,7 +10,7 @@
 <h2 th:text="${message}"></h2>
 <div class="container">
     <form action="#" method="post"
-          th:action="@{/apply}">
+          th:action="@{/leaves/apply}">
 
 
         <div class="form-group">
