--- a/src/main/resources/templates/Registration.html
+++ b/src/main/resources/templates/Registration.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2 th:text="${message}"></h2>
-<div class="container"><form action="#" th:action="@{/UserRegister}"
+<div class="container"><form action="#" th:action="@{/users/userRegister/}"
 							th:object="${userReg}" method="post">
   <div class="form-group">
     <label for="exampleInputEmail1">First Name</label>
