at registration select role added

--- a/src/main/resources/templates/Registration.html
+++ b/src/main/resources/templates/Registration.html
@@ -32,18 +32,16 @@
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" name="password" id="exampleInputPassword1" placeholder="Password" required>
   </div>
-  <!--<div class="col-md-6 mb-4">
+  <div class="col-md-6 mb-4">
 <label>Select Roles</label>
 
     <select type="select" class="select" name="roles" required>
 
-      <option value="Emp">Emp</option>
-      <option value="Admin">Admin</option>
-      <option value="Lead">Lead</option>
-      <option value="Accountant">Accountant</option>
+      <option value="1">Emp</option>
+      <option value="2">Admin</option>
+      <option value="3">Lead</option>
+      <option value="4">Accountant</option>
     </select>
-&ndash;&gt;
-
   </div>-->
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
