--- a/src/main/resources/templates/Registration.html
+++ b/src/main/resources/templates/Registration.html
@@ -42,7 +42,7 @@
       <option value="3">Lead</option>
       <option value="4">Accountant</option>
     </select>
-  </div>-->
+  </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 </div>
