--- a/src/main/resources/templates/Dashboard.html
+++ b/src/main/resources/templates/Dashboard.html
@@ -26,6 +26,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/leaves/status">LeaveStatus</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/leavebal/status">LeaveBalance Details</a>
+            </li>
             <div sec:authorize="hasAnyAuthority('ADMIN', 'LEAD')">
                 <a th:href="@{'/leavebal/'}"> Add leave</a>|
 
